<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".DetailSearchActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="bottom"
        android:background="#D3D3D3"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:text="Parameters"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_search_site_id_label" />

        <EditText
            android:id="@+id/edit_text_detail_search_site_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint=""
            android:imeOptions="actionGo"
            android:inputType="text"
            android:text="@string/detail_search_site_id_def_value" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="6dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_search_language_label" />

        <EditText
            android:id="@+id/edit_text_detail_search_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint=""
            android:imeOptions="actionGo"
            android:inputType="text"
            android:text="" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="6dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/politicalView_label" />

        <EditText
            android:id="@+id/edit_text_detail_search_politicalview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint=""
            android:imeOptions="actionGo"
            android:inputType="text"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="display photo" />

        <Switch
            android:id="@+id/detail_search_photo_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="6dp" />

    <Button
        android:id="@+id/button_detail_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Search"
        android:textAllCaps="false" />

    <ProgressBar
        android:id="@+id/loading_detail_search"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="bottom"
        android:background="#D3D3D3"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:text="Result"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/response_detail_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="true" />


    <ImageView
        android:id="@+id/search_detail_site_photo_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:minWidth="48dp"
        android:minHeight="48dp" />

</LinearLayout>